--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <!-- <h1>Signup</h1>
-  <div id="signupForm">
+  <div id="signUpForm2">
     <input type="text" id="name" placeholder="Full Name">
     <input type="text" id="email" placeholder="Email Id"><br>
     <input type="number" id="contact" placeholder="Contact Number">
