added id to signup form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="text" id="email" placeholder="Email Id"><br>
     <input type="number" id="contact" placeholder="Contact Number">
     <input type="password" id="signup_password" placeholder="Password">
-    <button type="submit" onclick="signup()">Signup</button>
+    <button type="submit" id="signup" onclick="signup()">Signup</button>
   </div>
 
   <br/>
