--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <button type="submit" onclick = "forgotPassword()">Change Password</button>
   </div>
 
-  <!-- <h1>Signup</h1>
-  <div id="signUpForm2">
-    <input type="text" id="name" placeholder="Full Name">
+
+  <h1>Signup</h1>
+  <div id="signupForm">
+ <input type="text" id="name" placeholder="Full Name">
     <input type="text" id="email" placeholder="Email Id"><br>
     <input type="number" id="contact" placeholder="Contact Number">
     <input type="password" id="signup_password" placeholder="Password">
-    <button type="submit" onclick="signup()">Signup</button>
-  </div> -->
+    <button type="submit" id="signup" onclick="signup()">Signup</button>
+  </div>
 
   <br/>
 
